--- a/index.html
+++ b/index.html
@@ -124,13 +124,17 @@
                 alt="Mark Guerrero"
                 width="264"
               />
-              <h3 class="title-second">Mark Guerrero</h3>
-              <p>Product Designer</p>
+              <div class="descrip-team">
+                <h3 class="title-second">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/team/tom.jpg" alt="Tom Ford" width="264" />
-              <h3 class="title-second">Tom Ford</h3>
-              <p>Frontend Developer</p>
+              <div class="descrip-team">
+                <h3 class="title-second">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -138,8 +142,10 @@
                 alt="Camila Garcia"
                 width="264"
               />
-              <h3 class="title-second">Camila Garcia</h3>
-              <p>Marketing</p>
+              <div class="descrip-team">
+                <h3 class="title-second">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -147,8 +153,10 @@
                 alt="Daniel Wilson"
                 width="264"
               />
-              <h3 class="title-second">Daniel Wilson</h3>
-              <p>UI Designer</p>
+              <div class="descrip-team">
+                <h3 class="title-second">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
