--- a/portfolio.html
+++ b/portfolio.html
@@ -48,144 +48,164 @@
       </div>
     </header>
     <main>
-      <section class="section projects container">
-        <h1 class="title-invis">Our projects</h1>
-        <ul class="list buttons-flex">
-          <li class="button-item">
-            <button type="button" class="button">All</button>
-          </li>
-          <li class="button-item">
-            <button type="button" class="button">Web Site</button>
-          </li>
-          <li class="button-item">
-            <button type="button" class="button">App</button>
-          </li>
-          <li class="button-item">
-            <button type="button" class="button">Design</button>
-          </li>
-          <li class="button-item">
-            <button type="button" class="button">Marketing</button>
-          </li>
-        </ul>
-        <ul class="list projects-flex">
-          <li class="projects-item">
-            <img
-              src="./images/portf-project/app-1.jpg"
-              alt="Banking App Interface Concept"
-              width="360"
-            />
-            <h2 class="title-second">Banking App Interface Concept</h2>
-            <p class="projects-text">App</p>
-            <!-- <p class="text-card">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe,
-              eligendi!
-            </p> -->
-          </li>
-          <li class="projects-item">
-            <img
-              src="./images/portf-project/mark-2.jpg"
-              alt="Cashless Payment"
-              width="360"
-            />
-            <h2 class="title-second">Cashless Payment</h2>
-            <p class="projects-text">Marketing</p>
-            <!-- <p class="text-card">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad,
-              similique.
-            </p> -->
-          </li>
-          <li class="projects-item">
-            <img
-              src="./images/portf-project/app-3.jpg"
-              alt="Meditaion App"
-              width="360"
-            />
-            <h2 class="title-second">Meditaion App</h2>
-            <p class="projects-text">App</p>
-            <!-- <p class="text-card">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad,
-              similique.
-            </p> -->
-          </li>
-          <li class="projects-item">
-            <img
-              src="./images/portf-project/mark-4.jpg"
-              alt="Taxi Service"
-              width="360"
-            />
-            <h2 class="title-second">Taxi Service</h2>
-            <p class="projects-text">Marketing</p>
-            <!-- <p class="text-card">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad,
-              similique.
-            </p> -->
-          </li>
-          <li class="projects-item">
-            <img
-              src="./images/portf-project/des-5.jpg"
-              alt="Screen Illustrations"
-              width="360"
-            />
-            <h2 class="title-second">Screen Illustrations</h2>
-            <p class="projects-text">Design</p>
-            <!-- <p class="text-card">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore,
-              molestias.
-            </p> -->
-          </li>
-          <li class="projects-item">
-            <img
-              src="./images/portf-project/mark-6.jpg"
-              alt="Online Courses"
-              width="360"
-            />
-            <h2 class="title-second">Online Courses</h2>
-            <p class="projects-text">Marketing</p>
-            <!-- <p class="text-card">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore,
-              molestias.
-            </p> -->
-          </li>
-          <li class="projects-item">
-            <img
-              src="./images/portf-project/des-7.jpg"
-              alt="Instagram Stories Concept"
-              width="360"
-            />
-            <h2 class="title-second">Instagram Stories Concept</h2>
-            <p class="projects-text">Design</p>
-            <!-- <p class="text-card">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore,
-              molestias.
-            </p> -->
-          </li>
-          <li class="projects-item">
-            <img
-              src="./images/portf-project/web-8.jpg"
-              alt="Organic Food"
-              width="360"
-            />
-            <h2 class="title-second">Organic Food</h2>
-            <p class="projects-text">Web Site</p>
-            <!-- <p class="text-card">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur,
-              totam.
-            </p> -->
-          </li>
-          <li class="projects-item">
-            <img
-              src="./images/portf-project/web-9.jpg"
-              alt="Fresh Coffee"
-              width="360"
-            />
-            <h2 class="title-second">Fresh Coffee</h2>
-            <p class="projects-text">Web Site</p>
-            <!-- <p class="text-card">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur,
-              totam.
-            </p> -->
-          </li>
-        </ul>
+      <section class="section projects">
+        <div class="container">
+          <h1 class="title-invis">Our projects</h1>
+          <ul class="list buttons-flex">
+            <li class="button-item">
+              <button type="button" class="button">All</button>
+            </li>
+            <li class="button-item">
+              <button type="button" class="button">Web Site</button>
+            </li>
+            <li class="button-item">
+              <button type="button" class="button">App</button>
+            </li>
+            <li class="button-item">
+              <button type="button" class="button">Design</button>
+            </li>
+            <li class="button-item">
+              <button type="button" class="button">Marketing</button>
+            </li>
+          </ul>
+          <ul class="list projects-flex">
+            <li class="projects-item">
+              <img
+                src="./images/portf-project/app-1.jpg"
+                alt="Banking App Interface Concept"
+                width="360"
+              />
+              <div class="descrip-projects">
+                <h2 class="title-second">Banking App Interface Concept</h2>
+                <p class="projects-text">App</p>
+              </div>
+              <!-- <p class="text-card">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe,
+                eligendi!
+              </p> -->
+            </li>
+            <li class="projects-item">
+              <img
+                src="./images/portf-project/mark-2.jpg"
+                alt="Cashless Payment"
+                width="360"
+              />
+              <div class="descrip-projects">
+                <h2 class="title-second">Cashless Payment</h2>
+                <p class="projects-text">Marketing</p>
+              </div>
+              <!-- <p class="text-card">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad,
+                similique.
+              </p> -->
+            </li>
+            <li class="projects-item">
+              <img
+                src="./images/portf-project/app-3.jpg"
+                alt="Meditaion App"
+                width="360"
+              />
+              <div class="descrip-projects">
+                <h2 class="title-second">Meditaion App</h2>
+                <p class="projects-text">App</p>
+              </div>
+              <!-- <p class="text-card">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad,
+                similique.
+              </p> -->
+            </li>
+            <li class="projects-item">
+              <img
+                src="./images/portf-project/mark-4.jpg"
+                alt="Taxi Service"
+                width="360"
+              />
+              <div class="descrip-projects">
+                <h2 class="title-second">Taxi Service</h2>
+                <p class="projects-text">Marketing</p>
+              </div>
+              <!-- <p class="text-card">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad,
+                similique.
+              </p> -->
+            </li>
+            <li class="projects-item">
+              <img
+                src="./images/portf-project/des-5.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
+              <div class="descrip-projects">
+                <h2 class="title-second">Screen Illustrations</h2>
+                <p class="projects-text">Design</p>
+              </div>
+              <!-- <p class="text-card">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore,
+                molestias.
+              </p> -->
+            </li>
+            <li class="projects-item">
+              <img
+                src="./images/portf-project/mark-6.jpg"
+                alt="Online Courses"
+                width="360"
+              />
+              <div class="descrip-projects">
+                <h2 class="title-second">Online Courses</h2>
+                <p class="projects-text">Marketing</p>
+              </div>
+              <!-- <p class="text-card">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore,
+                molestias.
+              </p> -->
+            </li>
+            <li class="projects-item">
+              <img
+                src="./images/portf-project/des-7.jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+              />
+              <div class="descrip-projects">
+                <h2 class="title-second">Instagram Stories Concept</h2>
+                <p class="projects-text">Design</p>
+              </div>
+              <!-- <p class="text-card">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore,
+                molestias.
+              </p> -->
+            </li>
+            <li class="projects-item">
+              <img
+                src="./images/portf-project/web-8.jpg"
+                alt="Organic Food"
+                width="360"
+              />
+              <div class="descrip-projects">
+                <h2 class="title-second">Organic Food</h2>
+                <p class="projects-text">Web Site</p>
+              </div>
+              <!-- <p class="text-card">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur,
+                totam.
+              </p> -->
+            </li>
+            <li class="projects-item">
+              <img
+                src="./images/portf-project/web-9.jpg"
+                alt="Fresh Coffee"
+                width="360"
+              />
+              <div class="descrip-projects">
+                <h2 class="title-second">Fresh Coffee</h2>
+                <p class="projects-text">Web Site</p>
+              </div>
+              <!-- <p class="text-card">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur,
+                totam.
+              </p> -->
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
