--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
               <a href="./index.html" class="link">Studio</a>
             </li>
             <li class="menu-item">
-              <a href="./portfolio.html" class="link">Portfolio</a>
+              <a href="./portfolio.html" class="link current">Portfolio</a>
             </li>
             <li class="menu-item"><a href="" class="link">Contacts</a></li>
           </ul>
