--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <section class="section advantages">
         <!-- Заголовок надо будет скрыть -->
         <div class="container">
-          <h2 class="title-invis">Our advantages</h2>
+          <h2 hidden class="title-invis">Our advantages</h2>
           <ul class="list advant-flex">
             <li class="advant-item">
               <h3 class="title-second">Strategy</h3>
@@ -114,6 +114,7 @@
           </ul>
         </div>
       </section>
+      <!-- TEAM -->
       <section class="section team">
         <div class="container team">
           <h2 class="title">Our Team</h2>
