--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
     <main>
       <section class="section projects">
         <div class="container">
-          <h1 class="title-invis">Our projects</h1>
+          <h1 hidden class="title-invis">Our projects</h1>
           <ul class="list buttons-flex">
             <li class="button-item">
               <button type="button" class="button">All</button>
