--- a/index.html
+++ b/index.html
@@ -165,14 +165,15 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo"
-          ><span class="logo-web">Web</span
-          ><span class="logo-footer">Studio</span></a
-        >
-        <p class="text-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="logo-div">
+          <a href="./index.html" class="logo"
+            ><span class="logo-web">Web</span>Studio</a
+          >
+          <p class="text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
       </div>
     </footer>
   </body>
