--- a/portfolio.html
+++ b/portfolio.html
@@ -25,10 +25,10 @@
           >
           <ul class="index-nav list menu-flex nav-item">
             <li class="menu-item">
-              <a href="./index.html" class="link">Studio</a>
+              <a href="./index.html" class="link current">Studio</a>
             </li>
             <li class="menu-item">
-              <a href="./portfolio.html" class="link current">Portfolio</a>
+              <a href="./portfolio.html" class="link">Portfolio</a>
             </li>
             <li class="menu-item"><a href="" class="link">Contacts</a></li>
           </ul>
@@ -210,14 +210,15 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo"
-          ><span class="logo-web">Web</span
-          ><span class="logo-footer">Studio</span></a
-        >
-        <p class="text-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="logo-div">
+          <a href="./index.html" class="logo"
+            ><span class="logo-web">Web</span>Studio</a
+          >
+          <p class="text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
       </div>
     </footer>
   </body>
