--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           >
           <ul class="index-nav list menu-flex nav-item">
             <li class="menu-item">
-              <a href="./index.html" class="link current">Studio</a>
+              <a href="./index.html" class="link">Studio</a>
             </li>
             <li class="menu-item">
               <a href="./portfolio.html" class="link">Portfolio</a>
