--- a/portfolio.html
+++ b/portfolio.html
@@ -25,10 +25,10 @@
           >
           <ul class="index-nav list menu-flex nav-item">
             <li class="menu-item">
-              <a href="./index.html" class="link current">Studio</a>
+              <a href="./index.html" class="link">Studio</a>
             </li>
             <li class="menu-item">
-              <a href="./portfolio.html" class="link">Portfolio</a>
+              <a href="./portfolio.html" class="link current">Portfolio</a>
             </li>
             <li class="menu-item"><a href="" class="link">Contacts</a></li>
           </ul>
